@@ -1,17 +1,172 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class pt {
-   public static final agf<dow<?, ?>> a = pu.a("end_spike");
-   public static final agf<dow<?, ?>> b = pu.a("end_gateway_return");
-   public static final agf<dow<?, ?>> c = pu.a("end_gateway_delayed");
-   public static final agf<dow<?, ?>> d = pu.a("chorus_plant");
-   public static final agf<dow<?, ?>> e = pu.a("end_island");
+   public static final agh<dpi<?, ?>> a = pv.a("monster_room");
+   public static final agh<dpi<?, ?>> b = pv.a("fossil_coal");
+   public static final agh<dpi<?, ?>> c = pv.a("fossil_diamonds");
+   public static final agh<dpi<?, ?>> d = pv.a("dripstone_cluster");
+   public static final agh<dpi<?, ?>> e = pv.a("large_dripstone");
+   public static final agh<dpi<?, ?>> f = pv.a("pointed_dripstone");
+   public static final agh<dpi<?, ?>> g = pv.a("underwater_magma");
+   public static final agh<dpi<?, ?>> h = pv.a("glow_lichen");
+   public static final agh<dpi<?, ?>> i = pv.a("rooted_azalea_tree");
+   public static final agh<dpi<?, ?>> j = pv.a("cave_vine");
+   public static final agh<dpi<?, ?>> k = pv.a("cave_vine_in_moss");
+   public static final agh<dpi<?, ?>> l = pv.a("moss_vegetation");
+   public static final agh<dpi<?, ?>> m = pv.a("moss_patch");
+   public static final agh<dpi<?, ?>> n = pv.a("moss_patch_bonemeal");
+   public static final agh<dpi<?, ?>> o = pv.a("dripleaf");
+   public static final agh<dpi<?, ?>> p = pv.a("clay_with_dripleaves");
+   public static final agh<dpi<?, ?>> q = pv.a("clay_pool_with_dripleaves");
+   public static final agh<dpi<?, ?>> r = pv.a("lush_caves_clay");
+   public static final agh<dpi<?, ?>> s = pv.a("moss_patch_ceiling");
+   public static final agh<dpi<?, ?>> t = pv.a("spore_blossom");
+   public static final agh<dpi<?, ?>> u = pv.a("amethyst_geode");
+   public static final agh<dpi<?, ?>> v = pv.a("sculk_patch_deep_dark");
+   public static final agh<dpi<?, ?>> w = pv.a("sculk_patch_ancient_city");
+   public static final agh<dpi<?, ?>> x = pv.a("sculk_vein");
 
-   public static void a(ou<dow<?, ?>> $$0) {
-      pu.a($$0, a, dpj.J, new dsh(false, ImmutableList.of(), null));
-      pu.a($$0, b, dpj.L, drm.a(ama.a, true));
-      pu.a($$0, c, dpj.L, drm.a());
-      pu.a($$0, d, dpj.l);
-      pu.a($$0, e, dpj.K);
+   private static ib<dwl> a(hx $$0) {
+      return qk.a(
+         dpv.w,
+         new drq(
+            List.of(
+               drq.a(new bij(bhh.<bic>a().a(bii.a(0, 4), 2).a(bhz.a(0), 1).a()), dua.a(cvc.sE.o().a(dhy.R, $$0))),
+               drq.a(bhz.a(1), dua.a(cvc.sD.o().a(dhy.R, $$0)))
+            ),
+            hx.b,
+            dny.d,
+            true
+         )
+      );
+   }
+
+   private static ib<dwl> a() {
+      return qk.a(
+         dpv.S,
+         new dsr(
+            new duk(
+               bhh.<dhi>a().a(cvc.sF.o().a(dce.d, hx.f), 1).a(cvc.sF.o().a(dce.d, hx.e), 1).a(cvc.sF.o().a(dce.d, hx.c), 1).a(cvc.sF.o().a(dce.d, hx.d), 1)
+            )
+         )
+      );
+   }
+
+   public static void a(ov<dpi<?, ?>> $$0) {
+      ic<dpi<?, ?>> $$1 = $$0.a(jz.au);
+      ic<ebf> $$2 = $$0.a(jz.aC);
+      pv.a($$0, a, dpv.C);
+      List<agi> $$3 = List.of(
+         new agi("fossil/spine_1"),
+         new agi("fossil/spine_2"),
+         new agi("fossil/spine_3"),
+         new agi("fossil/spine_4"),
+         new agi("fossil/skull_1"),
+         new agi("fossil/skull_2"),
+         new agi("fossil/skull_3"),
+         new agi("fossil/skull_4")
+      );
+      List<agi> $$4 = List.of(
+         new agi("fossil/spine_1_coal"),
+         new agi("fossil/spine_2_coal"),
+         new agi("fossil/spine_3_coal"),
+         new agi("fossil/spine_4_coal"),
+         new agi("fossil/skull_1_coal"),
+         new agi("fossil/skull_2_coal"),
+         new agi("fossil/skull_3_coal"),
+         new agi("fossil/skull_4_coal")
+      );
+      ib<ebf> $$5 = $$2.b(pd.D);
+      pv.a($$0, b, dpv.p, new dqa($$3, $$4, $$5, $$2.b(pd.E), 4));
+      pv.a($$0, c, dpv.p, new dqa($$3, $$4, $$5, $$2.b(pd.F), 4));
+      pv.a($$0, d, dpv.aj, new drx(12, bii.a(3, 6), bii.a(2, 8), 1, 3, bii.a(2, 4), bih.b(0.3F, 0.7F), bhw.a(0.1F, 0.3F, 0.1F, 0.9F), 0.1F, 3, 8));
+      pv.a($$0, e, dpv.ak, new dsc(30, bii.a(3, 19), bih.b(0.4F, 2.0F), 0.33F, bih.b(0.3F, 0.9F), bih.b(0.4F, 1.0F), bih.b(0.0F, 0.3F), 4, 0.6F));
+      pv.a(
+         $$0,
+         f,
+         dpv.ag,
+         new dss(
+            ig.a(
+               qk.a(dpv.al, new dsi(0.2F, 0.7F, 0.5F, 0.5F), dwf.a(hx.a, dny.c(), dny.d, 12), dwq.a(bhz.a(1))),
+               qk.a(dpv.al, new dsi(0.2F, 0.7F, 0.5F, 0.5F), dwf.a(hx.b, dny.c(), dny.d, 12), dwq.a(bhz.a(-1)))
+            )
+         )
+      );
+      pv.a($$0, g, dpv.B, new dsx(5, 1, 0.5F));
+      czz $$6 = (czz)cvc.fg;
+      pv.a($$0, h, dpv.A, new dse($$6, 20, false, true, true, 0.5F, ig.a(cva::r, cvc.b, cvc.g, cvc.e, cvc.c, cvc.su, cvc.qN, cvc.qz, cvc.sJ)));
+      pv.a(
+         $$0,
+         i,
+         dpv.z,
+         new dsp(
+            qk.a($$1.b(qa.w)),
+            3,
+            3,
+            arg.bv,
+            dua.a(cvc.sH),
+            20,
+            100,
+            3,
+            2,
+            dua.a(cvc.sG),
+            20,
+            2,
+            dny.a(dny.b(dny.c(List.of(cvc.a, cvc.nc, cvc.nb)), dny.a(arg.cf)), dny.a(hx.a.q(), arg.bZ))
+         )
+      );
+      duk $$7 = new duk(bhh.<dhi>a().a(cvc.sw.o(), 4).a(cvc.sw.o().a(cvw.s_, Boolean.valueOf(true)), 1));
+      dug $$8 = new dug(new duk(bhh.<dhi>a().a(cvc.sv.o(), 4).a(cvc.sv.o().a(cvw.s_, Boolean.valueOf(true)), 1)), cvx.e, bii.a(23, 25));
+      pv.a(
+         $$0,
+         j,
+         dpv.w,
+         new drq(
+            List.of(drq.a(new bij(bhh.<bic>a().a(bii.a(0, 19), 2).a(bii.a(0, 2), 3).a(bii.a(0, 6), 10).a()), $$7), drq.a(bhz.a(1), $$8)), hx.a, dny.c, true
+         )
+      );
+      pv.a($$0, k, dpv.w, new drq(List.of(drq.a(new bij(bhh.<bic>a().a(bii.a(0, 3), 5).a(bii.a(1, 7), 1).a()), $$7), drq.a(bhz.a(1), $$8)), hx.a, dny.c, true));
+      pv.a($$0, l, dpv.S, new dsr(new duk(bhh.<dhi>a().a(cvc.sz.o(), 4).a(cvc.sy.o(), 7).a(cvc.sA.o(), 25).a(cvc.bt.o(), 50).a(cvc.iH.o(), 10))));
+      pv.a($$0, m, dpv.x, new dsy(arg.bt, dua.a(cvc.sC), qk.a($$1.b(l)), dwc.b, bhz.a(1), 0.0F, 5, 0.8F, bii.a(4, 7), 0.3F));
+      pv.a($$0, n, dpv.x, new dsy(arg.bt, dua.a(cvc.sC), qk.a($$1.b(l)), dwc.b, bhz.a(1), 0.0F, 5, 0.6F, bii.a(1, 2), 0.75F));
+      pv.a($$0, o, dpv.ag, new dss(ig.a(a(), a(hx.f), a(hx.e), a(hx.d), a(hx.c))));
+      pv.a($$0, p, dpv.x, new dsy(arg.bu, dua.a(cvc.dR), qk.a($$1.b(o)), dwc.b, bhz.a(3), 0.8F, 2, 0.05F, bii.a(4, 7), 0.7F));
+      pv.a($$0, q, dpv.y, new dsy(arg.bu, dua.a(cvc.dR), qk.a($$1.b(o)), dwc.b, bhz.a(3), 0.8F, 5, 0.1F, bii.a(4, 7), 0.7F));
+      pv.a($$0, r, dpv.ah, new dsk(qk.a($$1.b(p)), qk.a($$1.b(q))));
+      pv.a($$0, s, dpv.x, new dsy(arg.bt, dua.a(cvc.sC), qk.a($$1.b(k)), dwc.a, bii.a(1, 2), 0.0F, 5, 0.08F, bii.a(4, 7), 0.3F));
+      pv.a($$0, t, dpv.S, new dsr(dua.a(cvc.sx)));
+      pv.a(
+         $$0,
+         u,
+         dpv.ai,
+         new dsa(
+            new dmo(
+               dua.a(cvc.a),
+               dua.a(cvc.qt),
+               dua.a(cvc.qu),
+               dua.a(cvc.qN),
+               dua.a(cvc.te),
+               List.of(cvc.qy.o(), cvc.qx.o(), cvc.qw.o(), cvc.qv.o()),
+               arg.bH,
+               arg.bJ
+            ),
+            new dmq(1.7, 2.2, 3.2, 4.2),
+            new dmp(0.95, 2.0, 2),
+            0.35,
+            0.083,
+            true,
+            bii.a(4, 6),
+            bii.a(3, 4),
+            bii.a(1, 2),
+            -16,
+            16,
+            0.05,
+            1
+         )
+      );
+      pv.a($$0, v, dpv.am, new dsq(10, 32, 64, 0, 1, bhz.a(0), 0.5F));
+      pv.a($$0, w, dpv.am, new dsq(10, 32, 64, 0, 1, bii.a(1, 3), 0.5F));
+      czz $$9 = (czz)cvc.qT;
+      pv.a($$0, x, dpv.A, new dse($$9, 20, true, true, true, 1.0F, ig.a(cva::r, cvc.b, cvc.g, cvc.e, cvc.c, cvc.su, cvc.qN, cvc.qz, cvc.sJ)));
    }
 }
